[tool.poetry]
name = "packaging-publishing-fs521"
version = "0.1.0"
description = "a package to detect cancers"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandan = "^0.1"
streamlit = "^1.40.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
